@@ -21,6 +21,10 @@ General upgrade intructions
 
 Upgrading from v1.1.5
 ---------------------
+- In CActiveRecord::relations(), if a relation involves composite foreign keys, the foreign key
+  columns must be separated by commas now. Previously, the columns can be separated by either
+  commas or spaces. If your mode code are generated by Gii or yiic shell, you do not need to
+  worry about this.
 
 
 Upgrading from v1.1.4
